# surrealdb_uuid_serialization

./: Cargo.toml  README.md
src/: main.rs
