[package]
name = "issue_surrealdb_uuid"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
surrealdb = {version = "2.2.2", features = ["kv-mem"]}
uuid = {version = "1.16.0"}
tokio = "1.44.2"